--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,5 +3,57 @@
 @import 'global';
 @import 'reset';
 
+.header{
+  padding: 40px 0;
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+.menu{
+  &__list{
+    display: flex;
+    gap: 35px;
+  }
+  &__list-link{
+    color: $title;
+    padding-bottom: 4px;
+    transition: all .3s;
+    @extend %quicksand-400;
+    &:hover{
+      color: $accent;
+      border-bottom: 1px solid $accent;
+      @extend %quicksand-500;
+    }
+  }
+  &__list-link--active{
+    color: $accent;
+    border-bottom: 1px solid $accent;
+    @extend %quicksand-500;
+  }
+}
+
+.user-nav{
+  display: flex;
+  gap: 25px;
+  &__link{
+    position: relative
+  }
+  &__num{
+    color: #fff;
+    font-size: 12px;
+    line-height: 20px;
+    position: absolute;
+    top: -9px;
+    right: -14px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: $accent;
+    text-align: center;
+  }
+}
 
 @import 'media';
