--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -29,6 +29,16 @@
 }
 
 @font-face {
+  font-family: 'Roboto-Medium', sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  src: local('Roboto-Medium'),
+    url('../fonts/Roboto-Medium.woff2') format('woff2'),
+    url('../fonts/Roboto-Medium.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
   font-family: 'Roboto-Bold', sans-serif;
   font-weight: 700;
   font-style: normal;
