--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -20,18 +20,18 @@
   &__list-link{
     color: $title;
     padding-bottom: 4px;
-    transition: all .3s;
-    @extend %quicksand-400;
+    transition: all .3s ease;
+    @extend %roboto-400;
     &:hover{
       color: $accent;
       border-bottom: 1px solid $accent;
-      @extend %quicksand-500;
+      @extend %roboto-500;
     }
   }
   &__list-link--active{
     color: $accent;
     border-bottom: 1px solid $accent;
-    @extend %quicksand-500;
+    @extend %roboto-500;
   }
 }
 
@@ -53,6 +53,104 @@
     border-radius: 50%;
     background-color: $accent;
     text-align: center;
+  }
+}
+
+.footer{
+  background-color: $bg;
+}
+
+.footer-top{
+  padding: 70px 0 40px;
+  border-bottom: 1px solid #ececec;
+  display: flex;
+  gap: 60px;
+  &__contact{
+    max-width: 245px;
+  }
+  &__nav{
+    max-width: 170px;
+  }
+  &__item-form{
+    max-width: 470px;
+  }
+  &__logo{
+    display: block;
+    margin-bottom: 33px;
+  }
+  &__adress,
+  &__email,
+  &__phone{
+    margin-bottom: 14px;
+    display: block;
+  }
+  &__social-list{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 33px;
+  }
+  &__social-link{
+    transition: all .3s;
+    path{
+      fill: $default !important;
+    }
+    &:hover{
+      path{
+        fill: $accent !important;
+      }
+    }
+  }
+  &__title {
+    color: $title;
+    @extend %roboto-500;
+    margin-bottom: 37px;
+    font-size: 22px;
+  }
+  &__link{
+    margin-bottom: 14px;
+    display: block;
+  }
+  &__text{
+    margin-bottom: 25px;
+  }
+  &__form{
+    display: flex;
+    gap: 10px;
+  }
+  &__form-input{
+    background-color: #fff;
+    max-width: 320px;
+    width: 100%;
+    border: none;
+    padding: 12px 10px 12px 15px;
+    box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+    &::placeholder{
+      color: $default;
+      font-size: 16px;
+    }
+  }
+  &__form-btn{
+    border: none;
+    background-color: $accent;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 12px 24px;
+    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+    cursor: pointer;
+  }
+}
+
+.footer-bottom{
+  height: 75px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 12px;
+  &__accept{
+    display: flex;
+    gap: 25px;
+    align-items: center;
   }
 }
 
