added top slider section

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -27,3 +27,12 @@ $bg:#f6f6f6;
   font-family: 'Roboto-Bold', sans-serif;
   font-weight: 700;
 }
+
+%btn{
+  background-color: $accent;
+  text-transform: uppercase;
+  color: #fff;
+  @extend %roboto-400;
+  padding: 12px 24px;
+  box-shadow: 0px 10px 25px 0px rgba(254, 62, 87, 0.3);
+}
