--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,8 @@
 @import 'vars';
 @import 'fonts';
-@import 'global';
 @import 'reset';
+@import 'libs';
+@import 'global';
 
 .header{
   padding: 40px 0;
@@ -131,12 +132,9 @@
     }
   }
   &__form-btn{
+    @extend %btn;
     border: none;
-    background-color: $accent;
-    color: #fff;
-    text-transform: uppercase;
-    padding: 12px 24px;
-    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+    letter-spacing: 0.05em;
     cursor: pointer;
   }
 }
@@ -151,6 +149,80 @@
     display: flex;
     gap: 25px;
     align-items: center;
+  }
+}
+
+.top-slider{
+  background-color: $bg;
+  background-image: url('../images/top-slider-bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 65px 0 45px;
+  &__container{
+    max-width: 1560px;
+  }
+  &__content{
+    padding-left: 175px;
+    padding-top: 125px;
+  }
+  &__item{
+    display: flex !important;
+    justify-content: space-between;
+  }
+  &__title{
+    max-width: 670px;
+    color: $title;
+    font-size: 58px;
+    line-height: 68px;
+    @extend %roboto-700;
+    margin-bottom: 35px;
+  }
+  &__text{
+    max-width: 470px;
+    margin-bottom: 55px;
+  }
+  &__link{
+    @extend %btn;
+    letter-spacing: 0.2em;
+    padding: 17px 35px;
+  }
+  .slick-dots{
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    margin-top: -70px;
+    li{
+      button{
+        font-size: 0;
+        padding: 0;
+        background-color: transparent;
+        height: 28px;
+        width: 28px;
+        border: 1px solid transparent;
+        border-radius: 50%;
+        position: relative;
+        &::before{
+          content: "";
+          position: absolute;
+          width: 6px;
+          height: 6px;
+          border-radius: 50%;
+          background-color: $default;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+      &.slick-active{
+        button{
+          border-color: $accent;
+          &::before{
+            background-color: $accent;
+          }
+        }
+      }
+    }
+
   }
 }
 
