--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -154,7 +154,7 @@
 
 .top-slider{
   background-color: $bg;
-  background-image: url('../images/top-slider-bg.jpg');
+  background-image: url('../images/decor/top-slider-bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   padding: 65px 0 45px;
@@ -223,6 +223,137 @@
       }
     }
 
+  }
+}
+
+.categories-info{
+  padding: 120px 0;
+  background-image: url('../images/decor/categories-decor-bg.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
+}
+
+.info{
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  position: relative;
+  z-index: 1;
+  &::before,
+  &::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-repeat: no-repeat;
+  }
+  &::before{
+    max-height: 120px;
+    max-width: 120px;
+    top: -38px;
+    left: -40px;
+    background-image: url("../images/decor/info-before-bg.png");
+  }
+  &::after{
+    max-width: 65px;
+    max-height: 52px;
+    bottom: -21px;
+    right: -22px;
+    background-image: url("../images/decor/info-after-bg.png");
+  }
+  &__item{
+    background: #fff;
+    width: 370px;
+    padding: 60px 30px;
+    box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.34);
+  }
+  &__item-title{
+    margin: 35px 0 10px;
+    color: $title;
+    font-size: 22px;
+    @extend %roboto-400;
+  }
+}
+
+.categories{
+  padding-top: 110px;
+  &__items{
+    display: grid;
+    gap: 30px;
+    min-height: 635px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  &__item{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    padding-top: 35px;
+    padding-left: 40px;
+    &:nth-child(1){
+      grid-area: 1/1/3/2;
+      .categories__item-subtitle,
+      .categories__link:hover{
+        color: #5800e4;
+      }
+      .categories__link:hover {
+        display: inline-block;
+        border-bottom: 1px solid #5800e4;
+      }
+    }
+    &:nth-child(2){
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      grid-area: 1/2/2/4;
+      padding-top: 0;
+      .categories__item-subtitle,
+      .categories__link:hover {
+        color: $accent;
+      }
+      .categories__link:hover {
+        max-width: max-content;
+        border-bottom: 1px solid $accent;
+      }
+    }
+    &:nth-child(3) {
+      .categories__item-subtitle,
+      .categories__link:hover {
+        color: #ffb534;
+      }
+     .categories__link:hover {
+      display: inline-block;
+       border-bottom: 1px solid #ffb534;
+     }
+    }
+    &:nth-child(4) {
+      .categories__item-subtitle,
+      .categories__link:hover {
+        color: #34c3ff;
+      }
+      .categories__link:hover{
+        display: inline-block;
+        border-bottom: 1px solid #34c3ff;
+      }
+    }
+
+  }
+  &__item-subtitle{
+    margin-bottom: 10px;
+  }
+  &__item-title{
+    color: $title;
+    @extend %roboto-500;
+    font-size: 22px;
+    margin-bottom: 14px;
+  }
+  &__link{
+    text-transform: uppercase;
+    color: $title;
+    @extend %roboto-400;
+    transition: all .3s;
   }
 }
 
