--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -409,4 +409,118 @@
   }
 }
 
+.product{
+  padding: 105px 0 120px;
+  text-align: center;
+  &__items{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px 30px;
+    margin-bottom: 55px;
+  }
+  &__link{
+    text-transform: uppercase;
+    color: $title;
+    display: inline-block;
+    border: 1px solid $accent;
+    padding: 14px 27px;
+    letter-spacing: 0.2em;
+    @extend %roboto-400;
+  }
+}
+
+.product-item{
+  max-width: 370px;
+  text-align: center;
+  &__img-box{
+    position: relative;
+    height: 370px;
+    overflow: hidden;
+    margin-bottom: 25px;
+  }
+  &__link-box{
+    width: 210px;
+    height: 50px;
+    position: relative;
+    bottom: 100px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 25px;
+    box-shadow: 0px 5px 30px 0px rgba(152, 152, 152, 0.2);
+    margin: 0 auto;
+    transform: translateY(300%);
+    transition: all .3s;
+  }
+  &__link{
+    display: inherit;
+    path{
+      transition: all .3s;
+    }
+  }
+  &__link:hover{
+    path{
+      stroke: $accent;
+    }
+  }
+  &__link-line::before,
+  &__link-line::after{
+    content: "";
+    position: absolute;
+    width: 1px;
+    height: 30px;
+    background-color: #ececec;
+    top: 10px;
+  }
+  &__link-line::before{
+    left: 68px;
+  }
+  &__link-line::after{
+    right: 68px;
+  }
+  &:hover{
+    .product-item__link-box{
+      transform: translateY(0);
+    }
+  }
+  &__title{
+    color: $title;
+    margin: 18px 0 20px;
+    font-size: 22px;
+    @extend %roboto-400;
+  }
+  &__price{
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+  }
+  &__new-price{
+    @extend %roboto-500;
+    color: $title;
+  }
+  &__old-price{
+    @extend %roboto-400;
+    color: #ccccce;
+    text-decoration: line-through;
+  }
+  &--sale{
+    .product-item__img-box::before{
+      content: "SALE";
+      @extend %btn;
+      line-height: 1;
+      padding: 8px 9px 7px;
+      letter-spacing: 0.05em;
+      position: absolute;
+      top: 25px;
+      left: 25px;
+    }
+  }
+}
+
+.star{
+  gap: 2;
+  margin: 0 auto;
+}
+
 @import 'media';
