--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -523,4 +523,67 @@
   margin: 0 auto;
 }
 
+.promo{
+  background-image: url('../images/promo-bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  padding: 150px 0 160px;
+  text-align: center;
+  &__inner{
+    max-width: 570px;
+    width: 100%;
+    margin-left: auto;
+  }
+  &__subtitle{
+    color: $accent;
+    text-transform: uppercase;
+    font-size: 22px;
+    margin-bottom: 10px;
+  }
+  &__clock{
+    display: flex;
+    justify-content: center;
+    gap: 28px;
+    margin-top: 55px;
+  }
+  &__clock-item{
+    background-color: #fff;
+    box-shadow: 0px 10px 40px 0px rgba(187, 187, 187, 0.3);
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2px;
+    span{
+      @extend %roboto-700;
+      font-size: 48px;
+      color: $title;
+      line-height: 1;
+    }
+  }
+  &__link{
+    display: inline-block;
+    @extend %roboto-400;
+    color: $title;
+    letter-spacing: 0.2em;
+    padding: 16px 30px 17px;
+    border: 1px solid $accent;
+    margin-top: 55px;
+  }
+}
+
+.partners{
+  padding-top: 75px;
+  &__list{
+    height: 170px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
 @import 'media';
