--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -586,4 +586,130 @@
   }
 }
 
+.blog{
+  position: relative;
+  padding: 50px 0 160px;
+  &::before,
+  &::after{
+    content: "";
+    position: absolute;
+    z-index: -10;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+  }
+  &::before{
+    width: 106px;
+    height: 105px;
+    top: 53%;
+    left: 5%;
+    background-image: url('../images/decor/blog-decor-bg-before.png');
+  }
+  &::after{
+    bottom: 10%;
+    right: 5%;
+    width: 47px;
+    height: 47px;
+    background-image: url('../images/decor/blog-decor-bg-after.png');
+  }
+  &__items{
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+    background-color: #fff;
+    position: relative;
+    &::after{
+      content: "";
+      position: absolute;
+      top: -30px;
+      right: -26px;
+      width: 126px;
+      height: 53px;
+      background-image: url('../images/decor/blog-decor-after.png');
+      background-repeat: no-repeat;
+      z-index: -10;
+    }
+  }
+  &__item{
+    max-width: 370px;
+    border: 1px solid #ececec;
+    transition: all .3s;
+    &:hover{
+      border: 1px solid transparent;
+      box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.34);
+      .blog__item-link{
+        color: $accent;
+        &::after{
+          background-image: url('../images/icons/arrow-icon-red.svg');
+        }
+      }
+    }
+    }
+  &__item-imglink {
+    display: block;
+    img {
+      height: 280px;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+  &__item-box{
+    padding: 30px 40px;
+  }
+  &__item-info{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    gap: 10px;
+  }
+  &__item-author,
+  &__item-date{
+  padding-left: 30px;
+  position: relative;
+    &::before{
+      content: "";
+      background-repeat: no-repeat;
+      position: absolute;
+      height: 20px;
+      width: 20px;
+      left: 0;
+      top: 4px;
+    }
+  }
+  &__item-author::before{
+    background-image: url('../images/icons/blog-user-icon.png');
+  }
+  &__item-date::before{
+    background-image: url('../images/icons/blog-timer-icon.png');
+  }
+  &__item-title{
+    font-size: 22px;
+    line-height: 32px;
+    @extend %roboto-400;
+    color: $title;
+    margin-bottom: 10px;
+  }
+  &__item-link{
+    position: relative;
+    transition: all .3s;
+    svg{
+      position: absolute;
+      right: -23px;
+      top: -1px;
+    }
+  }
+  &__item-link::after{
+    content: "";
+    position: absolute;
+    top: -1px;
+    right: -22px;
+    width: 25px;
+    height: 25px;
+    background-image: url('../images/icons/arrow-icon.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+  }
+}
+
 @import 'media';
