--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -444,6 +444,90 @@
 .product-item{
   max-width: 370px;
   text-align: center;
+  &.product-item--list{
+    &:hover {
+      .product-item__link-box {
+        transform: translateY(-50px);
+      }
+    }
+    min-width: 100%;
+    display: flex;
+    text-align: left;
+    .product-item__img-box{
+      height: 250px;
+      min-width: 200px;
+      margin-bottom: 0;
+      img{
+        height: 250px;
+      }
+    }
+    .product-item__img-box::before{
+      display: none;
+    }
+    .product-item__link-box{
+          width: auto;
+          background-color: transparent;
+          box-shadow: none;
+          justify-content: center;
+          gap: 15px;
+      .product-item__link{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 50px;
+        width: 50px;
+        background-color: #fff;
+        border-radius: 50%;
+      }
+      .product-item__link-line {
+        display: none;
+      }
+    }
+    .product-item__text{
+      margin-bottom: 25px;
+    }
+    .product-item__btn{
+      color: #fff;
+      padding: 16px 42px;
+      line-height: 1;
+      background-color: $title;
+      border: none;
+      &:hover{
+        background-color: $accent;
+        box-shadow: 0 7px 20px rgba(255, 17, 48, 0.3);
+      }
+    }
+    .product-item__content-box{
+      display: block;
+    }
+    .product-item__box{
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .product-item__title{
+      order: -1;
+      width: 100%;
+      margin: 0;
+      margin-bottom: 10px;
+    }
+    .product-item__price{
+      order: -1;
+    }
+    .star{
+      margin-left: 23px;
+    }
+    .product-item__wrapper-box{
+      padding: 30px 40px;
+      border: 1px solid #ececec;
+      border-left: none;
+    }
+  }
+  &__content-box{
+    display: none;
+  }
+  &__images{
+    object-fit: cover;
+  }
   &__img-box{
     position: relative;
     height: 370px;
@@ -775,6 +859,347 @@
   &__text{
     margin-bottom: 25px;
   }
+}
+
+.page-404{
+  padding: 120px 0;
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+  }
+  &__content{
+    max-width: 570px;
+    width: 100%;
+  }
+  &__title{
+    @extend %roboto-700;
+    font-size: 48px;
+    color: #28384f;
+    margin-bottom: 30px;
+    line-height: 1;
+  }
+  &__text{
+    margin-bottom: 60px;
+    max-width: 90%;
+  }
+  &__link{
+    display: inline-block;
+    @extend %btn;
+    padding: 18px 34px
+  }
+}
+
+.shop{
+  padding: 120px 0 105px;
+  &__inner{
+    display: flex;
+  }
+  &__filters{
+    width: 370px;
+    margin-right: 30px;
+  }
+}
+
+.filter{
+  &__item{
+    padding: 35px 30px 40px;
+    border: 1px solid #ececec;
+    margin-bottom: 40px;
+  }
+  &__title{
+    text-transform: uppercase;
+    color: $title;
+    font-size: 22px;
+    @extend %roboto-400;
+    margin-bottom: 25px;
+  }
+}
+
+.filter-search{
+  &__form{
+    display: flex;
+  }
+  &__input{
+    border: none;
+    background-color: $bg;
+    height: 50px;
+    padding: 0 5px 2px 16px;
+    width: 260px;
+  }
+  &__btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 50px;
+    background-color: $accent;
+    border: none;
+    cursor: pointer;
+  }
+}
+
+.filter-price{
+  &__label{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 30px;
+  }
+  &__btn{
+    @extend %btn;
+    border: none;
+    padding: 14px 22px;
+    letter-spacing: 3.2px;
+    line-height: 1;
+  }
+}
+
+.irs--flat .irs-line {
+  top: 25px;
+  height: 5px;
+  background-color: #ececec;
+  border-radius: 0;
+}
+
+.irs--flat .irs-handle {
+  top: 0;
+  left: 50%;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  box-shadow: 0 0 13px rgba(90, 90, 90, 0.2);
+}
+
+.irs--flat .irs-handle>i:first-child{
+  display: none;
+}
+
+.irs--flat .irs-line{
+  top: 13px;
+}
+
+.irs--flat {
+  height: 30px;
+}
+
+.irs--flat .irs-bar {
+  top: 13px;
+  height: 5px;
+  background-color: $accent;
+}
+
+.irs-from,
+.irs-to,
+.irs-single{
+  display: none;
+}
+
+.irs--flat .irs-min,
+.irs--flat .irs-max{
+  display: none;
+}
+
+.filter-color{
+  &__label{
+    padding-bottom: 20px;
+    border-bottom: 1px solid #ececec;
+    display: flex;
+    justify-content: space-between;
+    & + .filter-color__label{
+      padding-top: 20px;
+    }
+    &:last-child{
+      border-bottom: none;
+      padding-bottom: 0;
+    }
+  }
+  &__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-color__checkbox{
+      background-image: url('../images/icons/checked.svg');
+    }
+  }
+  &__checkbox{
+    position: absolute;
+    height: 16px;
+    width: 16px;
+    margin-left: -16px;
+    margin-top: 5px;
+  }
+  &__checkbox--blue{
+    background-color: #00aeef;
+  }
+  &__checkbox--red{
+    background-color: #f52574;
+  }
+  &__checkbox--green{
+    background-color: #24d4ac;
+  }
+  &__checkbox--orange{
+    background-color: #ff7e00;
+  }
+  &__checkbox--black {
+    background-color: #000000;
+  }
+  &__checkbox--purple {
+    background-color: #923899;
+  }
+}
+
+.filter-size{
+  padding: 35px 30px 15px;
+  &__label{
+    display: block;
+    padding-left: 35px;
+    margin-bottom: 25px;
+  }
+  &__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-size__checkbox{
+      background-image: url('../images/icons/check-size.svg');
+      border: none;
+      & + .filter-size__text{
+        color: $accent;
+      }
+    }
+  }
+  &__checkbox{
+    height: 20px;
+    width: 20px;
+    background-image: url('../images/icons/non-check-size.svg');
+    position: absolute;
+    margin-left: -35px;
+    margin-top: 4px;
+  }
+}
+
+.filter-category{
+  &__label{
+    display: block;
+    margin-bottom: 15px;
+    cursor: pointer;
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
+  &__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-category__checkbox{
+      background-color: $accent;
+      color: #fff;
+    }
+  }
+  &__checkbox{
+    background-color: #f6f6f6;
+    color: $title;
+    line-height: 1;
+    display: flex;
+    justify-content: space-between;
+    padding: 16px 20px;
+  }
+}
+
+.filter-popular{
+  &__form{
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    column-gap: 15px;
+  }
+  &__label{
+    cursor: pointer;
+  }
+  &__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-popular__checkbox{
+      background-color: $accent;
+      color: #fff;
+      border: 1px solid transparent;
+    }
+  }
+  &__checkbox{
+    display: block;
+    border: 1px solid $default;
+    padding: 10px 20px 12px;
+    line-height: 1;
+  }
+}
+
+.shop-content{
+  width: 100%;
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border-bottom: 2px solid #ececec;
+    .product-item{
+      margin-bottom: 40px;
+    }
+  }
+  &__filter{
+    border: 1px solid #ececec;
+    padding: 20px 25px 20px 30px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__filter-buttons{
+    display: flex;
+    align-items: center;
+  }
+  &__filter-span{
+    line-height: 1;
+  }
+  &__filter-btn{
+    outline: none;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    margin-left: 15px;
+    line-height: 0;
+    cursor: pointer;
+    &.shop-content__filter-btn--active{
+      path{
+        fill: $accent;
+      }
+    }
+  }
+}
+
+.jq-selectbox__select{
+  margin-left: 30px;
+  border: none;
+  background: transparent;
+  background-color: transparent;
+  box-shadow: none;
+  text-shadow: none;
+  color: $default;
+  padding: 0 30px 0 0;
+  &:hover{
+    background: transparent;
+  }
+}
+
+.jq-selectbox__select-text{
+  @extend %quicksand-500;
+  font-size: 16px;
+}
+
+.jq-selectbox__trigger{
+  border-left: none;
+}
+
+.jq-selectbox__trigger-arrow {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  width: 10px;
+  height: 5px;
+  border: none;
+  background-image: url('../images/icons/angle-down.svg')
 }
 
 @import 'media';
