--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -89,3 +89,56 @@ a{
     color: inherit;
   }
 }
+
+.header--404-page{
+  background-color: $bg;
+}
+
+.user-nav__link--404-page{
+  span{
+    display: none;
+  }
+}
+
+.pagination{
+  display: flex;
+  justify-content: center;
+  padding: 30px 0;
+  .pagination__list{
+    display: flex;
+    padding: 0 35px;
+  }
+  &__item{
+    padding: 0 15px;
+  }
+  &__link--active{
+    color: $accent;
+  }
+  &__arrows{
+    text-transform: uppercase;
+    position: relative;
+    &::before{
+      content: "";
+      position: absolute;
+      width: 5px;
+      height: 10px;
+      top: 8px;
+    }
+  }
+  &__prev{
+    padding-left: 15px;
+    &::before{
+      background-image: url('../images/icons/pagination-angle-left.svg');
+      left: 0;
+    }
+
+  }
+  &__next{
+    padding-right: 15px;
+    &::before{
+      background-image: url('../images/icons/pagination-angle-right.svg');
+      right: 0;
+    }
+
+  }
+}
