--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -153,6 +153,9 @@
 }
 
 .top{
+  .top__title{
+    @extend %roboto-400;
+  }
   &__container{
     max-width: 1700px;
     margin: 0 auto;
@@ -590,6 +593,7 @@
     display: flex;
     justify-content: center;
     gap: 25px;
+    text-align: center;
   }
   &__new-price{
     @extend %roboto-500;
@@ -1200,6 +1204,461 @@
   height: 5px;
   border: none;
   background-image: url('../images/icons/angle-down.svg')
+}
+
+.product-page{
+  padding: 120px 0 0;
+}
+
+.product-one{
+  &__inner{
+    display: flex;
+  }
+  &__slide{
+    width: 730px;
+    margin-right: 70px;
+  }
+  &__content{
+    width: 370px;
+  }
+  &__title {
+    @extend %roboto-500;
+    font-size: 20px;
+    color: $title;
+    margin-bottom: 10px;
+  }
+  &__box{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+  }
+  &__price{
+    display: flex;
+    gap: 15px;
+    font-size: 18px;
+  }
+  &__price-new{
+    color: $title;
+  }
+  &__price-old{
+    text-decoration: line-through;
+  }
+  &__star{
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    span{
+      color: $title;
+    }
+  }
+  &__item-text{
+    margin-bottom: 30px;
+    span{
+      color: $title;
+      @extend %roboto-400;
+      font-size: 18px;
+    }
+  }
+  &__item-btn {
+    @extend %btn;
+    line-height: 1;
+    padding: 17px 40px;
+    border: none;
+    text-transform: none;
+    margin-left: 15px;
+  }
+}
+
+.jq-number__field{
+  width: 114px;
+  height: 50px;
+  border: 1px solid #f0f0f0;
+  border-bottom: 1px solid #f0f0f0;
+  transform: translateY(2px);
+}
+
+.jq-number{
+  padding: 0;
+  position: relative;
+}
+
+.jq-number__spin {
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  cursor: pointer;
+  top: 53%;
+  transform: translateY(-50%);
+}
+
+.jq-number__spin.minus{
+  left: 15px;
+}
+
+.jq-number__spin.plus {
+  right: 15px;
+}
+
+.jq-number__spin::after {
+  content: "";
+  position: absolute;
+  top: 7px;
+  transform: translateY(-50%);
+  left: 0;
+  width: 12px;
+  height: 2px;
+  background-color: $title;
+}
+
+.jq-number__spin.plus::before {
+  content: "";
+  position: absolute;
+  top: 6px;
+  left: 0;
+  width: 12px;
+  height: 2px;
+  background-color: $title;
+  transform: translateY(50%);
+  transform: rotate(90deg);
+}
+
+.jq-number__spin.minus::after {
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.jq-number__field input {
+  width: 100%;
+  height: 50px;
+  padding: 0;
+  border: none;
+  border-bottom: 1px solid #f0f0f0;
+  outline: none;
+  @extend %quicksand-500;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  color: $title;
+}
+
+.product-info{
+  &__list{
+    margin-bottom: 35px;
+  }
+  &__item{
+    margin-bottom: 5px;
+    display: flex;
+  }
+  &__title{
+    min-width: 100px;
+    color: $title;
+  }
+  &__link{
+    path{
+      fill: $default;
+    }
+    & + .product-info__link{
+      margin-left: 15px;
+    }
+    &:hover{
+      path{
+        fill: $accent;
+      }
+    }
+  }
+}
+
+
+
+.product-slide{
+  display: flex;
+  &__thumb{
+    width: 140px;
+    margin-right: 30px;
+    .slick-vertical,
+    .slick-slide {
+      border: none;
+      }
+  }
+  &__thumb-item{
+    margin-bottom: 23px;
+    width: 140px;
+    height: 140px;
+    cursor: pointer;
+    img{
+      height: 140px;
+      width: 140px;
+      object-fit: cover;
+    }
+  }
+  &__big{
+    width: 560px;
+    img{
+      width: 560px;
+      height: 650px;
+      object-fit: cover;
+    }
+  }
+}
+
+.product-filter{
+  &__color{
+    margin-bottom: 30px;
+  }
+  &__color-title,
+  &__size-title{
+    margin-bottom: 5px;
+    font-size: 18px;
+    color: $title;
+    @extend %roboto-400;
+  }
+  &__color-input{
+    @extend %radio-hidden;
+    &:checked{
+      & + .product-filter__color-checkbox{
+        border-color: $accent;
+      }
+    }
+  }
+  &__color-checkbox{
+    width: 24px;
+    height: 24px;
+    border: 1px solid #ccccce;
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
+    span{
+      display: inherit;
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      top: 3px;
+      left: 3px;
+    }
+  }
+  &__color-label{
+    margin-right: 10px;
+  }
+  &__size-input{
+    @extend %radio-hidden;
+    &:checked{
+      & + .product-filter__size-checkbox{
+        border-color: $accent;
+      }
+    }
+  }
+  &__size-checkbox{
+    height: 40px;
+    width: 40px;
+    border: 1px solid #ccccce;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    margin-right: 8px;
+  }
+  &__size{
+    margin-bottom: 30px;
+  }
+}
+
+.product-tabs{
+  padding-top: 110px;
+  &__top{
+    margin-bottom: 40px;
+    border-bottom: 1px solid #ececec;
+  }
+  &__top-item{
+    margin-bottom: 10px;
+    display: inline-block;
+    @extend %roboto-400;
+    font-size: 22px;
+    line-height: 28px;
+  }
+  &__top-item:not(:last-child){
+    margin-right: 60px;
+  }
+  &__top-item--active{
+    color: $title;
+    position: relative;
+    &::before{
+      content: "";
+      position: absolute;
+      bottom: -11px;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 1px;
+      background-color: $accent;
+    }
+  }
+  &__content-item{
+    display: none;
+    &.product-tabs__content-item--active{
+      display: block;
+    }
+  }
+}
+
+.comments{
+  margin-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  &__img{
+    margin-right: 30px;
+    border-radius: 50%;
+    height: 70px;
+    width: 70px;
+    object-fit: cover;
+  }
+  &__content-top{
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+  }
+  &__content-name{
+    color: $title;
+    @extend %roboto-400;
+    margin-right: 13px;
+  }
+  &__content-date{
+    padding-left: 13px;
+    position: relative;
+    &::after{
+      content: "";
+      position: absolute;
+      height: 14px;
+      width: 1px;
+      background-color: $default;
+      top: 5px;
+      left: 0;
+    }
+  }
+  &__content-star{
+    margin: 0;
+    margin-left: auto;
+  }
+  &__content-text{
+    margin-bottom: 10px;
+  }
+  &__content-reply{
+    display: inline-block;
+    padding-left: 25px;
+    position: relative;
+    &::before{
+      content: "";
+      position: absolute;
+      top: 7px;
+      left: 0;
+      width: 15px;
+      height: 15px;
+      background-image: url('../images/icons/reply-icon.svg');
+    }
+  }
+}
+
+.comments-form {
+  border-bottom: 1px solid #f0f0f0;
+  padding-bottom: 60px;
+  &__title {
+    color: $title;
+    font-size: 22px;
+    @extend %roboto-400;
+    padding-bottom: 16px;
+    margin-bottom: 35px;
+    position: relative;
+    &::before{
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      height: 2px;
+      width: 50px;
+      background-color: $accent;
+    }
+  }
+  &__rating{
+    align-items: center;
+    margin-bottom: 30px;
+  }
+  &__rating-title{
+    margin-right: 60px;
+  }
+  &__label:not(:last-of-type){
+    margin-right: 25px;
+  }
+  &__input{
+    @extend %radio-hidden;
+    &:checked + .comments-form__radio{
+      path{
+        fill: #ffc35b;
+      }
+    }
+  }
+  &__radio{
+    cursor: pointer;
+  }
+  &__box-input{
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+  }
+  &__text-input{
+    max-width: 570px;
+    width: 100%;
+    display: inline-block;
+    height: 50px;
+    padding: 0 20px;
+    border: 1px solid #ececec;
+    &::placeholder{
+      color: $default;
+    }
+  }
+  &__textarea{
+    border: 1px solid #ececec;
+    padding: 15px 20px;
+    display: block;
+    width: 100%;
+    height: 265px;
+    resize: none;
+    margin-bottom: 40px;
+      &::placeholder {
+        color: $default;
+      }
+  }
+  &__btn{
+    @extend %btn;
+    border: none;
+    line-height: 1;
+    padding: 20px 36px;
+  }
+}
+
+.related{
+  padding: 50px 0 120px;
+  &__title{
+    @extend %roboto-700;
+    font-size: 48px;
+    line-height: 1.1;
+    color: $title;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+  &__items{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 30px;
+  }
+  .product-item__img-box{
+    height: auto;
+    margin-bottom: 20px;
+  }
+  .product-item__title {
+    margin: 12px 0 3px;
+    font-size: 22px;
+  }
 }
 
 @import 'media';
