--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1661,4 +1661,216 @@
   }
 }
 
+.blogpage{
+  padding: 120px 0;
+  &__inner{
+    display: flex;
+    gap: 30px;
+  } 
+  &__content{
+    max-width: 770px;
+    width: 100%;
+  }
+  &__content-item{
+    border: 1px solid #ececec;
+    &:hover{
+      border-color: transparent;
+      box-shadow: 0 20px 60px rgba(202, 202, 202, 0.35);
+      .blogpage__content-title{
+        color: $accent;
+      }
+    }
+    &:not(:last-of-type){
+      margin-bottom: 60px;
+    }
+  }
+  &__content-media{
+    width: 100%;
+    max-width: 770px;
+    height: 450px;
+  }
+  &__media-image{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+  &__content-textbox{
+    padding: 40px 40px;
+  }
+  &__content-title{
+    display: block;
+    @extend %roboto-500;
+    color: $title;
+    font-size: 22px;
+    margin-bottom: 25px;
+    cursor: pointer;
+  }
+  &__item-info{
+    justify-content: left;
+    gap: 30px;
+  }
+  &__media-popup{
+    height: 100%;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__popup-link{
+    height: 80px;
+    width: 80px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &:hover{
+      img{
+        transform: scale(1.1);
+      }
+    }
+  }
+  &__media-slider,
+  &__slider-item{
+    width: 100%;
+    height: 100%;
+  }
+  &__media-slider{
+    position: relative;
+  }
+}
+
+.slick-prev.slick-arrow,
+.slick-next.slick-arrow{
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  transform: translateY(-50%);
+  border: none;
+  background-color: #fff;
+  font-size: 0;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  box-shadow: 0 7px 20px rgba(168, 168, 168, 0.3);
+  &:hover{
+    background-color: $accent;
+    &::before,
+    &::after{
+      background-color: #fff;
+    }
+  }
+  &::before,
+  &::after{
+    content: "";
+    position: absolute;
+    z-index: 2;
+    height: 3px;
+    width: 9px;
+    background-color: $accent;
+    left: 42%;
+  }
+  &::before{
+    top: 52%;
+    transform: rotate(-45deg);
+  }
+  &::after{
+    bottom: 52%;
+    transform: rotate(45deg);
+  }
+}
+
+.slick-prev.slick-arrow{
+  left: 40px;
+  &::before {
+      top: 52%;
+      transform: rotate(45deg);
+      left: 38%;
+    }
+  
+    &::after {
+      bottom: 52%;
+      transform: rotate(-45deg);
+      left: 38%;
+    }
+}
+
+.slick-next.slick-arrow{
+  right: 40px;
+}
+
+.blogfilter{
+  max-width: 370px;
+  width: 100%;
+  &__portfolio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__portfolio-img{
+    object-fit: cover;
+    margin-bottom: 35px;
+  }
+  &__portfolio-title{
+    display: block;
+    @extend %roboto-700;
+    font-size: 18px;
+    color: $title;
+    text-align: center;
+    margin-bottom: 25px;
+    span{
+      display: inherit;
+      @extend %quicksand-500;
+      font-size: 16px;
+      color: $accent;
+    }
+  }
+  &__portfolio-text{
+    text-align: center;
+  }
+  .footer-top__social-list{
+    margin-top: 20px;
+  }
+  &__post-item{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    padding-top: 20px;
+    &:not(:last-of-type){
+      border-bottom: 1px solid #ececec;
+      padding-bottom: 20px;
+    }
+  }
+  &__item-title{
+    display: block;
+    @extend %roboto-400;
+    color: $title;
+    font-size: 18px;
+    line-height: 24px;
+  }
+  &__item-date{
+    display: block;
+    color: $default;
+    padding-left: 25px;
+    margin-top: 10px;
+    line-height: 1;
+    position: relative;
+    &::before{
+      content: "";
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      top: 0;
+      left: 0;
+      background-image: url('../images/icons/date-icon.svg');
+    }
+  }
+  &__item-img{
+    height: 80px;
+    width: 80px;
+  }
+}
+
 @import 'media';
