--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1505,8 +1505,12 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+  &__item{
+    display: flex;
+    gap: 30px;
+    align-items: center;
+  }
   &__img{
-    margin-right: 30px;
     border-radius: 50%;
     height: 70px;
     width: 70px;
@@ -1870,6 +1874,169 @@
   &__item-img{
     height: 80px;
     width: 80px;
+  }
+}
+
+.blogpost{
+  &__infobox-img{
+    float: left;
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  &__content-img{
+    object-fit: cover;
+  }
+  &__infobox{
+     padding: 30px;
+     border: 1px solid #ececec;
+     margin-bottom: 30px;
+    h3 {
+        @extend %roboto-500;
+        font-size: 22px;
+        margin-bottom: 20px;
+        color: $title;
+      }
+    
+      blockquote {
+        padding: 36px 40px;
+        background-color: $bg;
+        border-left: 3px solid $accent;
+        @extend %roboto-400;
+        font-size: 22px;
+        line-height: 1.3;
+        color: $title;
+        margin-bottom: 30px;
+      }
+    
+      p {
+        &:not(:last-of-type) {
+          margin-bottom: 30px;
+        }
+      } 
+    }
+  &__info-items{
+    display: flex; 
+    gap: 30px; 
+  }
+  &__info-item{
+    padding-left: 25px;
+    position: relative;
+    margin-bottom: 25px;  
+  }
+  &__info-item--date,
+  &__info-item--comments,
+  &__info-item--author{
+    &::before{
+      content: "";
+      position: absolute;
+      height: 16px;
+      width: 16px;
+      top: 5px;
+      left: 0;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  }
+
+  &__info-item--date{
+    &::before{
+      background-image: url('../images/icons/calender-icon.svg');
+    }
+  }
+  &__info-item--comments{
+    &::before {
+      background-image: url('../images/icons/comment-icon.svg');
+  }
+  }
+  &__info-item--author{
+    &::before {
+      background-image: url('../images/icons/user-icon.svg');
+  }
+  }
+}
+
+.blogpost-author{
+  padding-bottom: 40px;
+  margin-bottom: 40px;
+  border-bottom: 1px solid #ececec;
+  &__social{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+    padding: 0 30px;
+  }
+  &__name{
+    @extend %roboto-500;
+    font-size: 22px;
+    color: $title;
+    margin-bottom: 20px;
+  }
+  &__list-title{
+    @extend %quicksand-500;
+    color: $title;
+    text-transform: uppercase;
+    display: block;
+  }
+  &__list-tags{
+    display: flex;
+  }
+  &__list-link{
+    margin-left: 10px;
+    &:not(:last-child){
+      &::after{
+        content: ",";
+      }
+    }
+    cursor: pointer;
+  }
+  &__list-share{
+    display: flex;
+    align-items: center;
+    .footer-top__social-item{
+      margin-left: 12px;
+    }
+    .footer-top__social-link{
+      display: flex;
+    }
+  }
+  &__photo{
+    float: left;
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  &__name{
+    padding-top: 10px;
+  }
+}
+
+.blogpost-comments{
+  .comments__item{
+    margin-bottom: 30px;
+  }
+  &__title{
+    @extend %roboto-700;
+    margin-bottom: 30px;
+    color: $title;
+    font-size: 24px;
+  }
+  .comments__content-top{
+    
+  }
+}
+
+.comments-form--blogpage{
+  padding-top: 40px;
+  border-top: 1px solid #ececec;
+}
+
+.comments-form__title--blogpage{
+  @extend %roboto-700;
+  font-size: 24px;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  padding: 0;
+  &::before{
+    display: none;
   }
 }
 
