--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -11,9 +11,11 @@
     justify-content: space-between;
     align-items: center;
   }
+  position: relative;
 }
 
 .menu{
+  transition: all .3s;
   &__list{
     display: flex;
     gap: 35px;
@@ -34,6 +36,86 @@
     border-bottom: 1px solid $accent;
     @extend %roboto-700;
   }
+}
+
+.menu__list-btn{
+  display: none;
+  position: absolute;
+  right: 15px;
+  height: 30px;
+  width: 30px;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  &::before,
+  &::after,
+  .menu__list-btn-item{
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 2px;
+    left: 0;
+    background-color: #000000;
+  }
+  &::before {
+    top: 0;
+  }
+  &::after{
+    bottom: 0;
+  }
+}
+
+.menu__list-btn-item{
+  top: 14px;  
+  left: 0;
+}
+
+.menu__list-btn.menu--active{
+  &::before {
+    top: 14px;
+    transform: rotate(45deg);
+  }
+  &::after {
+    bottom:14px;
+    transform: rotate(-45deg);
+  }
+}
+
+.menu__list-btn-item.menu--active{
+  display: none;
+}
+
+
+.menu.menu--active{
+  position: absolute;
+  width: 100%;
+  background-color: #ececec;
+  top: 70px;
+  left: 0;
+  height: calc(100vh - 70px);
+  z-index: 998;
+  padding: 90px 15px 15px;
+  .menu__list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+  .menu__list-link{
+    font-size: 48px;
+    line-height: 1.1;
+  }
+}
+
+.user-nav.menu--active{
+  position: absolute;
+  z-index: 999;
+  top: 105px;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
 }
 
 .user-nav{
@@ -2018,9 +2100,6 @@
     margin-bottom: 30px;
     color: $title;
     font-size: 24px;
-  }
-  .comments__content-top{
-    
   }
 }
 
