--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,4 +1,20 @@
+@media (max-width:1440px){
+  .promo{
+    background-size: contain;
+    padding: 55px 0;
+  }
+}
+
 @media (max-width: 1200px) {
+  .categories-info,
+  .video-fashion,
+  .product {
+    padding: 60px 0;
+  }
+  .title {
+    font-size: 34px;
+    line-height: 1.2;
+  }
   .footer-top{
     padding: 30px 0 30px;
     gap: 30px;
@@ -47,9 +63,66 @@
     width: max-content;
     padding: 10px 20px;
   }
+  .categories{
+    padding-top: 60px;
+  }
+  .video-fashion{
+    &__inner{
+      gap: 30px;
+    }
+    &__title{
+      font-size: 34px;
+      margin-bottom: 5px;
+    }
+    &__text{
+      margin-bottom: 20px;
+    }
+    &__popup{
+      height: 370px;
+    }
+  }
+  .product{
+    &__items{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+  }
+  .product-item{
+    max-width: 280px;
+    &__img-box{
+      height: 280px;
+    }
+  }
+  .promo{
+    background-image: none;
+    background-color: $bg;
+    &__clock {
+      margin-top: 30px;
+    }
+    &__link{
+      margin-top: 50px;
+    }
+    &__inner{
+      margin: 0 auto;
+    }
+  }
+  .partners{
+    padding-top: 30px;
+  }
+  .blog{
+    padding-bottom: 60px;
+    &__item-info{
+      flex-direction: column;
+    }
+  }
 }
 
 @media (max-width: 992px) {
+  .title {
+      font-size: 28px;
+      line-height: 1.2;
+  }
   .header{
     height: 70px;
     padding: 24px 0;
@@ -103,7 +176,8 @@
   .footer-top__item-form {
     order: 4;
   }
-  .page-404__title{
+  .page-404__title
+  {
     font-size: 32px;
     margin-bottom: 26px;
   }
@@ -130,6 +204,26 @@
   .top-slider .slick-dots li button{
     height: 20px;
     width: 20px;
+  }
+  .info__item{
+    padding: 30px;
+  }
+  .info__item-title{
+    margin: 16px 0 10px;
+  }
+  .video-fashion{
+    &__content{
+      width: 50%;
+    }
+    &__link{
+      padding: 9px 20px 8px;
+    }
+    &__popup{
+      width: 50%;
+    }
+  }
+  .blog__item-box{
+    padding: 10px 15px;
   }
 }
 
@@ -199,6 +293,96 @@
     line-height: 20px;
     margin-bottom: 15px;
   }
+  .info{
+    flex-direction: column;
+    align-items: center;
+    &__item-icon {
+      height: 60px;
+      width: 60px;
+      margin: 0 auto;
+    }
+    &__item {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 5px;
+      height: 280px;
+      text-align: center;
+    }
+  }
+  .categories__items{
+    grid-template-rows: repeat(3, 1fr);
+    gap: 15px;
+  }
+  .categories__item-title{
+    margin-bottom: 9px;
+  }
+  .categories__item{
+    padding-top: 40px;
+    padding-left: 15px;
+    &:nth-child(1) {
+        grid-area: 1/1/4/2;
+        background-position: top center;
+      }
+    &:nth-child(2) {
+      background-position: top right;
+    }
+    &:nth-child(3) {
+      grid-area: 2/2/3/4;
+      background-position: top left;
+    }
+    &:nth-child(4) {
+      grid-area: 3/2/4/4;
+      background-position: top right;
+    }
+  }
+  .video-fashion{
+    &__inner{
+      flex-direction: column;
+      align-items: center;
+    }
+    &__popup,
+    &__content{
+      width: 80%;
+    }
+  }
+  .promo{
+    &__clock{
+      gap: 15px;
+    }
+    &__clock-item{
+      width: 85px;
+      height: 85px;
+      span{
+        font-size: 34px;
+      }
+    }
+  &__text{
+    font-size: 14px;
+  }
+  }
+  .partners{
+    &__list{
+      height: max-content;
+      flex-wrap: wrap;
+      gap: 30px;
+      justify-content: space-evenly;
+    }
+  }
+  .blog{
+    &__items{
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
+      &::after{
+        display: none;
+      }
+    }
+    &__text {
+      margin-bottom: 25px;
+    }
+  }
+  
 }
 
 @media (max-width: 475px){
@@ -211,4 +395,72 @@
   .page-404__title{
     text-align: center;
   }
+  .info__item{
+    width: 90%;
+    padding: 0 15px;
+  }
+  .categories__item{
+    padding: 20px 15px;
+    grid-template-rows: repeat(4, 1fr);
+    &:nth-child(1){
+      grid-area: 1/1/2/4;
+      background-position: center -50px;
+    }
+    &:nth-child(2) {
+      grid-area: 2/1/3/4;
+    }
+    &:nth-child(3) {
+      grid-area: 3/1/4/4;
+    }
+    &:nth-child(4) {
+      grid-area: 4/1/5/4;
+      background-position: center -10px;
+    }
+  }
+  .video-fashion {
+    &__inner{
+      gap: 60px;
+    }
+    &__popup,
+    &__content {
+      width: 100%;
+    }
+    &__subtitle{
+      font-size: 18px;
+      line-height: 1.2;
+      text-align: center;
+    }
+    &__title{
+      font-size: 30px;
+      text-align: center;
+    }
+    &__link{
+      margin: 0 auto;
+    }
+    &__text{
+      padding: 0 15px;
+    }
+  }
+  .promo {
+    padding: 30px 0;
+    &__clock {
+      gap: 5px;
+    }
+
+    &__clock-item {
+      width: 70px;
+      height: 70px;
+
+      span {
+        font-size: 22px;
+      }
+    }
+
+    &__text {
+      font-size: 12px;
+    }
+    &__link{
+      margin-top: 30px;
+    }
+  } 
 }
